@@ -1,3 +1,8 @@
+2022-12-04  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-videolinks.el (find-eev2022pyvideo): new function.
+	(ee-1stclassvideos-info): added an entry for "eev2022py".
+
 2022-12-03  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-rstdoc-intro): added some sections.
